--- a/index.html
+++ b/index.html
@@ -5516,6 +5516,7 @@ var $author$project$Main$init = F2(
 					$elm$core$Array$length($author$project$Words$commonWords))));
 	});
 var $elm$json$Json$Decode$field = _Json_decodeField;
+var $author$project$Main$DelChar = {$: 'DelChar'};
 var $author$project$Main$Gues = {$: 'Gues'};
 var $author$project$Main$Key = function (a) {
 	return {$: 'Key', a: a};
@@ -5528,10 +5529,13 @@ var $author$project$Main$keyToMsg = function (string) {
 		var _char = _v1.a;
 		return $author$project$Main$Key(_char);
 	} else {
-		if (string === 'Enter') {
-			return $author$project$Main$Gues;
-		} else {
-			return $author$project$Main$Nil;
+		switch (string) {
+			case 'Enter':
+				return $author$project$Main$Gues;
+			case 'Backspace':
+				return $author$project$Main$DelChar;
+			default:
+				return $author$project$Main$Nil;
 		}
 	}
 };
@@ -5935,10 +5939,10 @@ var $elm$browser$Browser$Events$on = F3(
 		return $elm$browser$Browser$Events$subscription(
 			A3($elm$browser$Browser$Events$MySub, node, name, decoder));
 	});
-var $elm$browser$Browser$Events$onKeyPress = A2($elm$browser$Browser$Events$on, $elm$browser$Browser$Events$Document, 'keypress');
+var $elm$browser$Browser$Events$onKeyDown = A2($elm$browser$Browser$Events$on, $elm$browser$Browser$Events$Document, 'keydown');
 var $elm$json$Json$Decode$string = _Json_decodeString;
 var $author$project$Main$subscriptions = function (_v0) {
-	return $elm$browser$Browser$Events$onKeyPress(
+	return $elm$browser$Browser$Events$onKeyDown(
 		A2(
 			$elm$json$Json$Decode$map,
 			$author$project$Main$keyToMsg,
@@ -6036,8 +6040,8 @@ var $author$project$Main$update = F2(
 				return _Debug_todo(
 					'Main',
 					{
-						start: {line: 63, column: 13},
-						end: {line: 63, column: 23}
+						start: {line: 69, column: 13},
+						end: {line: 69, column: 23}
 					})('Stagod');
 			}
 		} else {
@@ -6126,8 +6130,8 @@ var $author$project$Main$update = F2(
 					return _Debug_todo(
 						'Main',
 						{
-							start: {line: 78, column: 14},
-							end: {line: 78, column: 24}
+							start: {line: 84, column: 14},
+							end: {line: 84, column: 24}
 						})('Stagod');
 			}
 		}
@@ -6219,7 +6223,6 @@ var $author$project$Main$statusDiv = function (model) {
 					]));
 	}
 };
-var $author$project$Main$DelChar = {$: 'DelChar'};
 var $elm$html$Html$button = _VirtualDom_node('button');
 var $elm$virtual_dom$VirtualDom$Normal = function (a) {
 	return {$: 'Normal', a: a};
